--- a/src/app/components/skills/backpack-skill/backpack-skill.component.html
+++ b/src/app/components/skills/backpack-skill/backpack-skill.component.html
@@ -21,7 +21,7 @@
     <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Backpack; trackBy: id; let i = index"
                          [expanded]="selectedUpgrade == i" (opened)="selectedUpgrade = i">
       <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
-      <div fxLayout.md=" row wrap" fxLayout="column">
+      <div fxLayout="column">
         <mat-card>
           <mat-input-container>
             <input matInput placeholder="Rows" [value]="upgrade.rows ? upgrade.rows : 0" type="text"
