--- a/src/app/components/skills/heal-skill/heal-skill.component.html
+++ b/src/app/components/skills/heal-skill/heal-skill.component.html
@@ -33,27 +33,29 @@
   <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Heal; trackBy: id; let i = index"
                        [expanded]="selectedUpgrade == i" (opened)="selectedUpgrade = i">
     <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
-    <mat-card>
-      <mat-input-container>
-        <input matInput placeholder="Timer" [value]="upgrade.timer ? upgrade.timer : 0" type="text"
-               pattern="[+-=][0-9]+"
-               (blur)="update(skilltree, upgrade, 'timer', $event.srcElement.value)">
-        <span matSuffix>sec</span>
-      </mat-input-container>
-      <button mat-icon-button [satPopoverAnchorFor]="timerPopover" (click)="timerPopover.toggle()">
-        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
-      </button>
-    </mat-card>
-    <mat-card>
-      <mat-input-container>
-        <input matInput placeholder="Added Health" [value]="upgrade.health ? upgrade.health : 0" type="text"
-               pattern="[+-=][0-9]+(\.[0-9]+)?"
-               (blur)="update(skilltree, upgrade, 'health', $event.srcElement.value)">
-        <span matSuffix>health</span>
-      </mat-input-container>
-      <button mat-icon-button [satPopoverAnchorFor]="healthPopover" (click)="healthPopover.toggle()">
-        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
-      </button>
-    </mat-card>
+    <div fxLayout="column">
+      <mat-card>
+        <mat-input-container>
+          <input matInput placeholder="Timer" [value]="upgrade.timer ? upgrade.timer : 0" type="text"
+                 pattern="[+-=][0-9]+"
+                 (blur)="update(skilltree, upgrade, 'timer', $event.srcElement.value)">
+          <span matSuffix>sec</span>
+        </mat-input-container>
+        <button mat-icon-button [satPopoverAnchorFor]="timerPopover" (click)="timerPopover.toggle()">
+          <mat-icon svgIcon="info_outline">info_outline</mat-icon>
+        </button>
+      </mat-card>
+      <mat-card>
+        <mat-input-container>
+          <input matInput placeholder="Added Health" [value]="upgrade.health ? upgrade.health : 0" type="text"
+                 pattern="[+-=][0-9]+(\.[0-9]+)?"
+                 (blur)="update(skilltree, upgrade, 'health', $event.srcElement.value)">
+          <span matSuffix>health</span>
+        </mat-input-container>
+        <button mat-icon-button [satPopoverAnchorFor]="healthPopover" (click)="healthPopover.toggle()">
+          <mat-icon svgIcon="info_outline">info_outline</mat-icon>
+        </button>
+      </mat-card>
+    </div>
   </mat-expansion-panel>
 </div>
