--- a/src/app/components/skills/health-boost-skill/health-boost-skill.component.html
+++ b/src/app/components/skills/health-boost-skill/health-boost-skill.component.html
@@ -20,16 +20,18 @@
   <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.HealthBoost; trackBy: id; let i = index"
                        [expanded]="selectedUpgrade == i" (opened)="selectedUpgrade = i">
     <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
-    <mat-card>
-      <mat-input-container>
-        <input matInput placeholder="Health" [value]="upgrade.health ? upgrade.health : 0"
-               type="text" pattern="[+-=][0-9]+(\.[0-9]+)?"
-               (blur)="update(skilltree, upgrade, 'health', $event.srcElement.value)">
-        <span matSuffix>extra health</span>
-      </mat-input-container>
-      <button mat-icon-button [satPopoverAnchorFor]="healthPopover" (click)="healthPopover.toggle()">
-        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
-      </button>
-    </mat-card>
+    <div fxLayout="column">
+      <mat-card>
+        <mat-input-container>
+          <input matInput placeholder="Health" [value]="upgrade.health ? upgrade.health : 0"
+                 type="text" pattern="[+-=][0-9]+(\.[0-9]+)?"
+                 (blur)="update(skilltree, upgrade, 'health', $event.srcElement.value)">
+          <span matSuffix>extra health</span>
+        </mat-input-container>
+        <button mat-icon-button [satPopoverAnchorFor]="healthPopover" (click)="healthPopover.toggle()">
+          <mat-icon svgIcon="info_outline">info_outline</mat-icon>
+        </button>
+      </mat-card>
+    </div>
   </mat-expansion-panel>
 </div>
