--- a/src/app/components/skills/pickup-skill/pickup-skill.component.html
+++ b/src/app/components/skills/pickup-skill/pickup-skill.component.html
@@ -4,41 +4,43 @@
   </mat-toolbar>
 
   <sat-popover #rangePopover xAlign="after" yAlign="center" hasBackdrop>
-  <mat-card>
-    <mat-card-content>
-      <p>The range where blocks will be picked up by the pet.<br>
-        Format: [+-=][number]<br>
-        Examples:<br>
-        +2<br>
-        -3<br>
-        =6
-      </p>
-    </mat-card-content>
-  </mat-card>
-</sat-popover>
+    <mat-card>
+      <mat-card-content>
+        <p>The range where blocks will be picked up by the pet.<br>
+          Format: [+-=][number]<br>
+          Examples:<br>
+          +2<br>
+          -3<br>
+          =6
+        </p>
+      </mat-card-content>
+    </mat-card>
+  </sat-popover>
 
   <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Pickup; trackBy: id; let i = index"
                        [expanded]="selectedUpgrade == i" (opened)="selectedUpgrade = i">
     <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
-    <mat-card>
-      <mat-input-container>
-        <input matInput placeholder="Range" [value]="upgrade.range ? upgrade.range : 0" type="text"
-               pattern="[+-=][0-9]+(\.[0-9]+)?"
-               (blur)="update(skilltree, upgrade, 'range', $event.srcElement.value)">
-        <span matSuffix>meters</span>
-      </mat-input-container>
-      <button mat-icon-button [satPopoverAnchorFor]="rangePopover" (click)="rangePopover.toggle()">
-        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
-      </button>
-    </mat-card>
-    <mat-card>
-      <mat-checkbox [checked]="upgrade.exp == true"
-                    [indeterminate]="upgrade.exp == null"
-                    (click)="toggle(skilltree, upgrade, 'exp')"
-                    [matTooltip]="upgrade.exp == true ? 'Yes' : (upgrade.exp == false ? 'No' : 'Don\'t change')"
-                    matTooltipPosition="right">
-        Can pick up exp?
-      </mat-checkbox>
-    </mat-card>
+    <div fxLayout="column">
+      <mat-card>
+        <mat-input-container>
+          <input matInput placeholder="Range" [value]="upgrade.range ? upgrade.range : 0" type="text"
+                 pattern="[+-=][0-9]+(\.[0-9]+)?"
+                 (blur)="update(skilltree, upgrade, 'range', $event.srcElement.value)">
+          <span matSuffix>meters</span>
+        </mat-input-container>
+        <button mat-icon-button [satPopoverAnchorFor]="rangePopover" (click)="rangePopover.toggle()">
+          <mat-icon svgIcon="info_outline">info_outline</mat-icon>
+        </button>
+      </mat-card>
+      <mat-card>
+        <mat-checkbox [checked]="upgrade.exp == true"
+                      [indeterminate]="upgrade.exp == null"
+                      (click)="toggle(skilltree, upgrade, 'exp')"
+                      [matTooltip]="upgrade.exp == true ? 'Yes' : (upgrade.exp == false ? 'No' : 'Don\'t change')"
+                      matTooltipPosition="right">
+          Can pick up exp?
+        </mat-checkbox>
+      </mat-card>
+    </div>
   </mat-expansion-panel>
 </div>
