--- a/src/app/components/skill-editor/skill-editor.component.html
+++ b/src/app/components/skill-editor/skill-editor.component.html
@@ -4,14 +4,14 @@
       <mat-select-trigger>
         <span *ngIf="selectedSkill">
           <img [src]="'assets/img/skills/' +  selectedSkill.icon" class="matl-chip__skill">
-          &nbsp;{{ selectedSkill.name }}
+          &nbsp;{{ selectedSkill.id }}
         </span>
       </mat-select-trigger>
       <mat-option *ngFor="let skill of skills" [value]="skill">
         <img [src]="'assets/img/skills/' +  skill.icon" class="matl-chip__skill">
-        &nbsp;{{ skill.name }}
-        <span *ngIf="(selectedSkilltree$ | async).skills[skill.name]?.length > 0"
-              [matBadge]="(selectedSkilltree$ | async).skills[skill.name]?.length" matBadgePosition="after"
+        &nbsp;{{ skill.id }}
+        <span *ngIf="(selectedSkilltree$ | async).skills[skill.id]?.length > 0"
+              [matBadge]="(selectedSkilltree$ | async).skills[skill.id]?.length" matBadgePosition="after"
               matBadgeColor="primary">&nbsp;&nbsp;</span>
       </mat-option>
     </mat-select>
