--- a/src/app/components/skills/pickup-skill/pickup-skill.component.html
+++ b/src/app/components/skills/pickup-skill/pickup-skill.component.html
@@ -17,7 +17,7 @@
     </mat-card>
   </sat-popover>
 
-  <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Pickup; trackBy: id; let i = index"
+  <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Pickup; trackBy: trackById; let i = index"
                        [expanded]="selectedUpgrade == i" (opened)="selectedUpgrade = i">
     <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
     <div fxLayout="column">
