--- a/src/app/components/skills/backpack-skill/backpack-skill.component.html
+++ b/src/app/components/skills/backpack-skill/backpack-skill.component.html
@@ -18,7 +18,7 @@
   </sat-popover>
 
   <mat-accordion>
-    <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Backpack; trackBy: id; let i = index"
+    <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Backpack; trackBy: trackById; let i = index"
                          [expanded]="selectedUpgrade == i" (opened)="selectedUpgrade = i">
       <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
       <div fxLayout="column">
