--- a/src/app/components/skills/slow-skill/slow-skill.component.html
+++ b/src/app/components/skills/slow-skill/slow-skill.component.html
@@ -30,7 +30,7 @@
     </mat-card>
   </sat-popover>
 
-  <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Slow; trackBy: id; let i = index"
+  <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Slow; trackBy: trackById; let i = index"
                        [expanded]="selectedUpgrade == i" (opened)="selectedUpgrade = i">
     <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
     <div fxLayout="column">
