--- a/src/app/components/skilltree/skilltree.component.html
+++ b/src/app/components/skilltree/skilltree.component.html
@@ -23,10 +23,10 @@
   <button mat-button (click)="back()" *ngIf="!isRootPath">
     <mat-icon svgIcon="arrow_back">arrow_back</mat-icon>
   </button>
-  <button mat-button (click)="undo()" [disabled]="(pastStates$ | async).length <= 0">
+  <button mat-button (click)="undo()" [disabled]="(pastStates$ | async).length <= 0" matTooltip="Undo last change">
     <mat-icon svgIcon="undo">undo</mat-icon>
   </button>
-  <button mat-button (click)="redo()" [disabled]="(futureStates$ | async).length <= 0">
+  <button mat-button (click)="redo()" [disabled]="(futureStates$ | async).length <= 0" matTooltip="Redo last change">
     <mat-icon svgIcon="redo">redo</mat-icon>
   </button>
   <mat-card>
