prevent duplicate level rules

--- a/src/app/components/upgrade-add-dialog/upgrade-add-dialog.component.html
+++ b/src/app/components/upgrade-add-dialog/upgrade-add-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Add Upgrade</h1>
 <div mat-dialog-content>
-  <mat-tab-group [selectedIndex]="type" [dynamicHeight]="true">
+  <mat-tab-group [(selectedIndex)]="type" [dynamicHeight]="true">
     <mat-tab label="Fixed">
       <div fxLayout="column">
         <mat-form-field class="demo-chip-list">
