add save functionality to the button skilltree saver is missing tho

--- a/src/app/components/skilltree/skilltree.component.html
+++ b/src/app/components/skilltree/skilltree.component.html
@@ -4,7 +4,7 @@
                fxLayoutAlign="start center"
                [opened]="showSidenav$ | async"
                [disableClose]="true">
-    <button mat-icon-button (click)="closeSidenav()">
+    <button mat-icon-button (click)="save()">
       <mat-icon svgIcon="save">save</mat-icon>
     </button>
     <button mat-icon-button (click)="closeSidenav()">
