--- a/src/app/components/skilltree-list/skilltree-list.component.html
+++ b/src/app/components/skilltree-list/skilltree-list.component.html
@@ -20,11 +20,25 @@
 </context-menu>
 
 <mat-card class="no-padding">
-  <mat-nav-list dense>
-    <mat-list-item *ngFor="let skilltree of skilltrees" (click)="editSkills(skilltree)"
-                   [contextMenu]="skilltreeMenu" [contextMenuSubject]="skilltree">
+  <mat-nav-list dense
+                fxLayout="column"
+                dndDropzone
+                (dndDrop)="drag($event)"
+                class="dndList">
+    <mat-list-item dndPlaceholderRef
+                   class="dndPlaceholder">
+    </mat-list-item>
+    <mat-list-item *ngFor="let skilltree of skilltrees"
+                   (click)="editSkills(skilltree)"
+                   (contextmenu)="onContextMenu($event, skilltree, skilltreeMenu)"
+                   [contextMenu]="skilltreeMenu"
+                   [contextMenuSubject]="skilltree"
+                   [dndDraggable]="skilltree"
+                   dndEffectAllowed="move">
 
-      <img mat-list-avatar src="assets/img/mobheads/All.png">
+      <mat-icon mat-list-icon dndHandle class="handle" svgIcon="drag_handle">drag_handle</mat-icon>
+
+      <img mat-list-avatar dndDragImageRef src="assets/img/mobheads/All.png">
 
       <h3 mat-line> {{skilltree.name}} </h3>
       <p mat-line>
@@ -34,7 +48,9 @@
       <button mat-icon-button (click)="selectSkilltree(skilltree)">
         <mat-icon svgIcon="create">create</mat-icon>
       </button>
+      <button mat-icon-button (click)="onContextMenu($event, skilltree, skilltreeMenu)">
+        <mat-icon svgIcon="arrow_drop_down">arrow_drop_down</mat-icon>
+      </button>
     </mat-list-item>
   </mat-nav-list>
 </mat-card>
-
