--- a/src/app/components/skilltree-list/skilltree-list.component.html
+++ b/src/app/components/skilltree-list/skilltree-list.component.html
@@ -48,6 +48,9 @@
       <button mat-icon-button (click)="selectSkilltree(skilltree)">
         <mat-icon svgIcon="create">create</mat-icon>
       </button>
+      <button mat-icon-button (click)="deleteSkilltree(skilltree)">
+        <mat-icon svgIcon="delete">delete</mat-icon>
+      </button>
       <button mat-icon-button (click)="onContextMenu($event, skilltree, skilltreeMenu)">
         <mat-icon svgIcon="arrow_drop_down">arrow_drop_down</mat-icon>
       </button>
