--- a/src/app/components/skills/beacon-skill/beacon-skill.component.html
+++ b/src/app/components/skills/beacon-skill/beacon-skill.component.html
@@ -237,6 +237,12 @@
           </mat-list>
         </mat-card>
       </div>
+      <mat-action-row>
+        <button mat-raised-button color="primary" (click)="deleteRule(skilltree, upgrade)">
+          <mat-icon svgIcon="delete">delete</mat-icon>
+          Delete
+        </button>
+      </mat-action-row>
     </mat-expansion-panel>
   </mat-accordion>
 </div>
