--- a/src/app/components/skills/sprint-skill/sprint-skill.component.html
+++ b/src/app/components/skills/sprint-skill/sprint-skill.component.html
@@ -17,5 +17,11 @@
         </mat-checkbox>
       </mat-card>
     </div>
+    <mat-action-row>
+      <button mat-raised-button color="primary" (click)="deleteRule(skilltree, upgrade)">
+        <mat-icon svgIcon="delete">delete</mat-icon>
+        Delete
+      </button>
+    </mat-action-row>
   </mat-expansion-panel>
 </div>
