--- a/src/app/components/skills/stomp-skill/stomp-skill.component.html
+++ b/src/app/components/skills/stomp-skill/stomp-skill.component.html
@@ -57,5 +57,11 @@
         </button>
       </mat-card>
     </div>
+    <mat-action-row>
+      <button mat-raised-button color="primary" (click)="deleteRule(skilltree, upgrade)">
+        <mat-icon svgIcon="delete">delete</mat-icon>
+        Delete
+      </button>
+    </mat-action-row>
   </mat-expansion-panel>
 </div>
