add new libraries to the about page

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -21,4 +21,14 @@
     <h4 mat-line class="bold">Material design icons</h4>
     <p mat-line><a href="https://material.io/icons/">https://material.io/icons/</a> (Apache License Version 2.0)</p>
   </mat-list-item>
+  <mat-list-item>
+    <h4 mat-line class="bold">NgxDragDrop</h4>
+    <p mat-line><a href="https://github.com/reppners/ngx-drag-drop">https://github.com/reppners/ngx-drag-drop</a> (MIT)
+    </p>
+  </mat-list-item>
+  <mat-list-item>
+    <h4 mat-line class="bold">ngx-clipboard</h4>
+    <p mat-line><a href="https://maxisam.github.io/ngx-clipboard/">https://maxisam.github.io/ngx-clipboard/</a> (MIT)
+    </p>
+  </mat-list-item>
 </mat-list>
