--- a/src/ressources/styles/components/app.scss
+++ b/src/ressources/styles/components/app.scss
@@ -12,6 +12,14 @@ html, body, main, app-skilltree, mat-sidenav-container {
   margin-top: 1em !important;;
 }
 
+.spacer-l-1em {
+  margin-left: 1em !important;;
+}
+
+.spacer-r-1em {
+  margin-right: 1em !important;;
+}
+
 .bold {
   font-weight: bold !important;
 }
