rename the main component prefix all components with stc instead of app

--- a/src/app/components/skilltree-editor/skilltree-editor.component.html
+++ b/src/app/components/skilltree-editor/skilltree-editor.component.html
@@ -7,6 +7,6 @@
   </a>
 </nav>
 
-<app-skill-editor *ngIf="(tab$ | async) == 0"></app-skill-editor>
-<app-skilltree-properties *ngIf="(tab$ | async) == 1"></app-skilltree-properties>
+<stc-skill-editor *ngIf="(tab$ | async) == 0"></stc-skill-editor>
+<stc-skilltree-properties *ngIf="(tab$ | async) == 1"></stc-skilltree-properties>
 
