--- a/src/ressources/styles/components/app.scss
+++ b/src/ressources/styles/components/app.scss
@@ -1,4 +1,4 @@
-html, body, main, app-skilltree, mat-sidenav-container {
+html, body, main, skilltree-creator, mat-sidenav-container {
   margin: 0;
   height: 100%;
   font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
